--- a/projects/fantatic/frontend/templates/_layout.jade
+++ b/projects/fantatic/frontend/templates/_layout.jade
@@ -121,9 +121,9 @@ html(lang="ru-RU")
         link(rel='stylesheet', href="/css/plugins/owl.carousel.min.css")
         link(rel='stylesheet', href="/css/plugins/owl.theme.default.min.css")
         link(rel='stylesheet', href="/css/plugins/magnific-popup.css")
-    body.t-windowLoading.fixed.t-animeOne.hideAll
+    body.t-windowLoading.fixed.t-animeOne
         div.wrapper
-            div.t-astronaut.animation
+            div.t-astronaut.t-blockHidden
             div.t-frame(style="display: none;")
             div.background.topBackground.animation
             include _header
