--- a/projects/fantatic/frontend/sass/allcategories.sass
+++ b/projects/fantatic/frontend/sass/allcategories.sass
@@ -3,8 +3,13 @@
   margin: 0 auto
   margin-top: 120px
   transition: 1s cubic-bezier(.35,0,.33,1)
-  animation: showSections 2s cubic-bezier(.35,0,.33,1)
-  animation-delay: 2s
+  opacity: 1
+  pointer-events: all
+  &.t-showThis
+    animation: showSections 1s cubic-bezier(.35,0,.33,1)
+  &.t-blockHidden
+    opacity: 0
+    pointer-events: none
   .t-allCategoriesSlider
     margin-top: 44px
     position: relative
