--- a/projects/fantatic/frontend/sass/header.sass
+++ b/projects/fantatic/frontend/sass/header.sass
@@ -101,6 +101,9 @@ header
           display: inline-block
           color: #4F4F4F
           font-size: 14px
+          transition: .4s ease
+          &:hover
+            color: #26bfd1
     .t-CompanyMenuHeader
       transform: translateX(-6%)
       opacity: 0
