--- a/projects/fantatic/frontend/templates/_footer.jade
+++ b/projects/fantatic/frontend/templates/_footer.jade
@@ -36,7 +36,7 @@ footer#footer
                 li
                     a(href="#") Контакты
                 li
-                    a(href="#") Обратная связь
+                    a(href="/feedback.html") Обратная связь
         div.t-footerCompany.mainWidth
             span.t-footerSectionTitle Мы в социальных сетях
             ul.t-footerMenuList.t-footerMenuListSocial
