--- a/projects/fantatic/frontend/templates/catalog.jade
+++ b/projects/fantatic/frontend/templates/catalog.jade
@@ -53,7 +53,7 @@ block content
                             span.t-redDot
                         div.t-catalogRightContainerBody
                             div.t-barndAll
-                                ul.t-brandsSection.t-filterMainList
+                                ul.t-brandsSection.t-filterMainList.t-checkBoxesCtrl
                                     li
                                         input(type="checkbox" id="allBrands").t-hideSomething
                                         label(for="allBrands").t-checkControl Все бренды
