--- a/projects/fantatic/frontend/templates/goodsOrder.jade
+++ b/projects/fantatic/frontend/templates/goodsOrder.jade
@@ -1,7 +1,7 @@
 extends _layout
 block content
     main
-        section.t-goodsOrderWrapper.t-mainContainerCection
+        section.t-goodsOrderWrapper.t-mainContainerSection
             h2.t-sectionTitle  Подарки с юмором
             div.t-breadCrumbs
                 ul
