--- a/projects/fantatic/frontend/templates/guarantee.jade
+++ b/projects/fantatic/frontend/templates/guarantee.jade
@@ -1,14 +1,14 @@
 extends _layout
 block content
     main
-        section.t-guarantee.t-mainContainerCection
+        section.t-guarantee.t-mainContainerSection
             h2.t-sectionTitle  Подарки с юмором
-                div.t-breadCrumbs
-                    ul
-                        li
-                            a(href="#") Главная
-                        li
-                            a(href="#") Гарантия
+            div.t-breadCrumbs
+                ul
+                    li
+                        a(href="#") Главная
+                    li
+                        a(href="#") Гарантия
             div.t-standartMainContainer
                 h3 Условия гарантийного обслуживания
                 p Все условия гарантийного обслуживания, обмена и возврата товара применимы к товарам, приобретенным в розничной сети, интернет-магазине и электронном каталоге.
