--- a/projects/fantatic/frontend/templates/_footer.jade
+++ b/projects/fantatic/frontend/templates/_footer.jade
@@ -1,6 +1,6 @@
 footer#footer
     div.t-moonGradient
-    div.t-moon(data-controlls)#t-moon
+    div.t-moon.t-moonMove#t-moon
     div.t-footerMain
         div.t-footerBuyer.mainWidth
             span.t-footerSectionTitle Покупателю
@@ -14,7 +14,7 @@ footer#footer
                 li
                     a(href="#") Обмен, возврат и ремонт
                 li
-                    a(href="#") Вопросы и ответы
+                    a(href="/questions.html") Вопросы и ответы
                 li
                     a(href="#") Условия и правила сайта
         div.t-footerCatalog.mainWidth
@@ -34,7 +34,7 @@ footer#footer
                 li
                     a(href="#") О нас
                 li
-                    a(href="#") Контакты
+                    a(href="/contacts.html") Контакты
                 li
                     a(href="/feedback.html") Обратная связь
         div.t-footerCompany.mainWidth
