--- a/projects/fantatic/frontend/templates/goodsOrder2.jade
+++ b/projects/fantatic/frontend/templates/goodsOrder2.jade
@@ -1,7 +1,7 @@
 extends _layout
 block content
     main
-        section.t-goodsOrderWrapper.t-mainContainerCection
+        section.t-goodsOrderWrapper.t-mainContainerSection
             h2.t-sectionTitle  Подарки с юмором
             div.t-breadCrumbs
                 ul
@@ -165,7 +165,6 @@ block content
             div.t-cardsHolder
                 + tCards()
         section.t-bottomInfo
-            + tBottomCardHolder()
 
     div.t-reviewsDialog.t-dialogCard
         div.t-closeBtn.t-reviewsDialogClose
