--- a/projects/fantatic/frontend/sass/_default.sass
+++ b/projects/fantatic/frontend/sass/_default.sass
@@ -91,7 +91,7 @@ body
   display: flex
   flex-direction: column
   position: relative
-  overflow: hidden
+  //overflow: hidden
 
 header, footer
   flex: 0 0 auto
@@ -246,11 +246,12 @@ main
   width: 100%
   height: 640px
   position: absolute
-  transform: translateY(400px)
   left: 0
   bottom: 0
   background-size: cover
   z-index: -2
+  &.t-moonMove
+    transform: translateY(400px)
 
 .t-astronaut
   position: fixed
@@ -1007,3 +1008,52 @@ main
   font-size: 16px
   font-weight: bold
   text-decoration: none
+
+.t-accordHolder
+  .t-accordItem
+    border-bottom: 1px solid #f2f2f2
+    padding: 32px 0 24px 0
+    &:first-child
+      padding-top: 0
+    &:last-child
+      padding-bottom: 0
+      border: none
+    .t-openAccordItem
+      display: flex
+      align-items: center
+      justify-content: space-between
+      cursor: pointer
+      transition-property: border-bottom
+      transition-delay: .43s
+      .t-accordHeading
+        transition: .3s ease
+      .t-accordArrow
+        position: relative
+        display: inline-block
+        height: 2px
+        width: 6px
+        background-color: #4E4E4E
+        transition: .3s ease
+        &:after
+          content: ''
+          position: absolute
+          left: 2px
+          top: 2px
+          width: 2px
+          height: 2px
+          background-color: #4E4E4E
+          transition: .3s ease
+      &.isActive
+        border: none
+        transition-property: border-bottom
+        transition-delay: .43s
+        .t-accordArrow
+          transform: rotate(180deg)
+      &:hover
+        .t-accordHeading
+          color: #26BFD1
+        .t-accordArrow, .t-accordArrow:after
+          background-color: #26BFD1
+    .t-accordItemContent
+      display: none
+      padding-top: 8px
