--- a/projects/fantatic/frontend/sass/allcategories.sass
+++ b/projects/fantatic/frontend/sass/allcategories.sass
@@ -5,6 +5,7 @@
   transition: 1s cubic-bezier(.35,0,.33,1)
   opacity: 1
   pointer-events: all
+  overflow: hidden
   &.t-showThis
     animation: showSections 1s cubic-bezier(.35,0,.33,1)
   &.t-blockHidden
