--- a/projects/fantatic/frontend/sass/_default.sass
+++ b/projects/fantatic/frontend/sass/_default.sass
@@ -91,7 +91,7 @@ body
   display: flex
   flex-direction: column
   position: relative
-  //overflow: hidden
+  overflow: hidden
 
 header, footer
   flex: 0 0 auto
