--- a/projects/fantatic/frontend/templates/catalog.jade
+++ b/projects/fantatic/frontend/templates/catalog.jade
@@ -10,7 +10,7 @@ block content
                     li
                         a(href="#") Новый год
                     li
-                        a(href="#") Подарки с юмором
+                        span Подарки с юмором
             div.t-sidesWrappper
                 div.t-catalogLeft
                     ul.t-sortContainer
