--- a/projects/fantatic/frontend/templates/questions.jade
+++ b/projects/fantatic/frontend/templates/questions.jade
@@ -1,6 +1,6 @@
 extends _layout
 block content
-    main
+    main.t-mediaClassCtrl
         section.t-questionsAndAnswers.t-mainContainerSection
             h2.t-sectionTitle  Вопросы и ответы
             div.t-standartMainContainer
