--- a/projects/fantatic/frontend/templates/goodsOrder.jade
+++ b/projects/fantatic/frontend/templates/goodsOrder.jade
@@ -1,6 +1,6 @@
 extends _layout
 block content
-    main
+    main.t-mediaClassCtrl
         section.t-goodsOrderWrapper.t-mainContainerSection
             h2.t-sectionTitle  Подарки с юмором
             div.t-breadCrumbs
@@ -10,7 +10,7 @@ block content
                     li -
                         a(href="#") Новый год
                     li -
-                        a(href="#") Подарки с юмором
+                       span Подарки с юмором
 
             div.t-aboutGoodsCard.t-GoodsCardMain
                 div.t-aboutGoodsImgContainer
